# skforge

./: AGENT-ARMY-STATUS.md  AI-COMMUNITY.md  AI-FIRST.md  ARCHITECTURE.md  CONTRIBUTING.md  ECOSYSTEM.md  MOLTBOOK-INVITE.md  QUANTUM-VISION.md  README.md  RECON.md  SAFETY.md  SKILL.md  STACKS.md  forge.mjs  index.html  install.sh  package.json  pyproject.toml  skill.yaml
.github/workflows/: ai-contributor.yml  publish.yml
blueprints/: LICENSE  SOUL-FRAMEWORK.md  claude.md
blueprints/3d-printing/: BLUEPRINT.md  architecture.md  features.yml
blueprints/TEMPLATE/: BLUEPRINT.md  features.yml
blueprints/agent-security/: BLUEPRINT.md  architecture.md  features.yml
blueprints/agent-skills/: BLUEPRINT.md  architecture.md  features.yml
blueprints/agent-teams/: SOUL-FRAMEWORK.md  features.yml
blueprints/ai-form-filling/: BLUEPRINT.md  architecture.md  features.yml
blueprints/chat-platforms/: BLUEPRINT.md  architecture.md  features.yml
blueprints/document-signing/: BLUEPRINT.md  architecture.md  features.yml
blueprints/emotional-continuity/: BLUEPRINT.md  architecture.md  features.yml
blueprints/emotional-memory/: BLUEPRINT.md  architecture.md  features.yml
blueprints/encrypted-messaging/: BLUEPRINT.md  architecture.md  features.yml
blueprints/encrypted-vaults/: BLUEPRINT.md  features.yml  (+1 more)
cli/: forge  serve.mjs
docs/: ARCHITECTURE.md
forge/: driver-spec.md
marketing/: launch-package-v2.md  launch-package.md
research/: tier1-categories.md  tier2-categories.md  tier2-databases.md  tier3-devsecops.md
tests/: test_parser.py
website/: README.md  app.html  index.html
(+75 files in other folders)
